\name{NEWS} \title{News for Package \pkg{rebmix}}
\newcommand{\cpkg}{\href{http://CRAN.R-project.org/package=#1}{\pkg{#1}}}
\section{Changes in version 2.8.4}{ 
\itemize{
\item Method \code{Zp} is added.
\item Fixed bugs in \code{plot} method.
\item Fixed bugs in \code{split} method.
\item Fixed bugs in \code{RCLRMIX} method.
\item Fixed bugs in \code{RCLSMIX} method.
\item Improved C++ functions \code{GlobalModeKNN()}, \code{GlobalModePW()} and \code{GlobalModeH()}.
\item Improved C++ functions \code{REBMIXKNN()}, \code{REBMIXPW()} and \code{REBMIXH()}.
}
}
\section{Changes in version 2.8.3}{ 
\itemize{
\item Fixed convergence bug in C++ code.
\item Bayes classification is improved by introducing outliers.
\item Method \code{plot} is improved.
\item Fixed bug in C++ functions \code{RoughEstimationKNN()}, \code{RoughEstimationPW()} and \code{RoughEstimationH()}.
\item Improved C++ functions \code{GlobalModeKNN()}, \code{GlobalModePW()} and \code{GlobalModeH()}.
}
}
\section{Changes in version 2.8.2}{ 
\itemize{
\item Fixed information criterion bug in C++ and R code.
\item Fixed heap block freed with an inappropriate deallocation function bug in C++ code.
\item Method \code{plot} is improved.
\item Methods \code{demix}, \code{dfmix}, \code{pemix} and \code{pfmix} are improved.
\item Methods \code{split}, \code{chunk} and \code{BFSMIX} are added.
\item Renewed vignette.
}
}
\section{Changes in version 2.8.1}{ 
\itemize{
\item Fixed isnan and isinf bug in C++ code.
\item Fixed invalid object bug in vignette.
}
}
\section{Changes in version 2.8.0}{ 
\itemize{
\item Object-oriented C++ code is improved considerably.
\item R code is extended and rewritten in S4 class system.
\item Multivariate normal parametric family with unrestricted variance-covariance matrices is enabled.
\item Classification is improved.
\item Clustering is added.
\item Datasets \code{iris} is added. 
\item Renewed vignette.