@@ -577,7 +577,7 @@ function(model,
 {
   digits <- getOption("digits"); options(digits = 15)
 
-  message("REBMIX Version 2.8.4")
+  message("REBMIX Version 2.9.0")
  
   flush.console()
   
